--- a/lifestage_carryover/scripts/01.01-qPCR.Rmd
+++ b/lifestage_carryover/scripts/01.01-qPCR.Rmd
@@ -97,7 +97,9 @@ calculate_delta_Cq <- function(df) {
 ```
 
 ## Create delta Cq boxplots
-```{r function-delta-Cq-boxplots}
+
+### Lifestage comparison
+```{r function-boxplots-delta-Cq}
 # Function to create box plots for each comparison
 create_boxplot_delta_Cq <- function(data, comparison, t_test_results) {
   # Extract life stages from comparison
@@ -151,6 +153,78 @@ create_boxplot_delta_Cq <- function(data, comparison, t_test_results) {
     theme_minimal() +
     theme(legend.position = "right") +
     scale_fill_manual(values=c("darkgray", "salmon", "lightblue", "lightgreen")) +
+    ylim(y_limits) +
+    labs(x = "Target", y = "Delta Cq", title = formatted_title) +
+    # Highlighted section: Adds asterisks
+    geom_text(data = t_test_results_with_asterisks, 
+              aes(x = Target, y = y_limits[2] - 1, label = asterisk), 
+              vjust = -0.5, size = 8, color = "black", inherit.aes = FALSE)
+
+  print(boxplot)
+}
+```
+
+### Treatment comparisons
+```{r function-boxplots-delta-Cq-treatments}
+# Function to create box plots for each comparison of conditioning treatments within life stages
+create_boxplot_conditioning <- function(data, comparison, t_test_results) {
+  # Extract life stage and conditioning treatments from comparison
+  comparison_parts <- unlist(strsplit(comparison, "\\."))
+  life_stage <- comparison_parts[1]
+  treatment1 <- comparison_parts[2]
+  treatment2 <- comparison_parts[3]
+
+  # Debugging: Print life stage and treatments
+  print(paste("Life stage and treatments for comparison:", comparison))
+  print(c(life_stage, treatment1, treatment2))
+
+  # Filter data for the relevant life stage and conditioning treatments
+  filtered_data <- data %>%
+    filter(life.stage == life_stage, conditioning.treatment %in% c(treatment1, treatment2))
+
+  # Debugging: Print filtered data
+  print("Filtered data:")
+  print(filtered_data)
+
+  # Check if both treatments are included
+  if (!all(c(treatment1, treatment2) %in% unique(filtered_data$conditioning.treatment))) {
+    stop("Not all treatments are included in the filtered data")
+  }
+
+  y_limits <- range(filtered_data$delta_Cq, na.rm = TRUE)
+
+  # Debugging: Print y_limits
+  print("Y limits:")
+  print(y_limits)
+
+  # Filter t_test_results for the current comparison
+  t_test_results_filtered <- t_test_results %>%
+    filter(comparison == !!comparison)
+
+  # Debugging: Print filtered t_test_results
+  print("Filtered t_test_results:")
+  print(t_test_results_filtered)
+
+  # Filter t_test_results for asterisks
+  t_test_results_with_asterisks <- t_test_results_filtered %>%
+    filter(asterisk != "")
+
+  # Debugging: Print t_test_results_with_asterisks
+  print("t_test_results_with_asterisks:")
+  print(t_test_results_with_asterisks)
+
+  # Format the title
+  formatted_title <- paste0(toupper(substring(life_stage, 1, 1)), substring(life_stage, 2), 
+                            " - ", 
+                            toupper(substring(treatment1, 1, 1)), substring(treatment1, 2), 
+                            " vs. ", 
+                            toupper(substring(treatment2, 1, 1)), substring(treatment2, 2))
+
+  boxplot <- ggplot(filtered_data, aes(x = Target, y = delta_Cq, fill = conditioning.treatment)) +
+    geom_boxplot(position = position_dodge(width = 0.75)) +
+    theme_minimal() +
+    theme(legend.position = "right") +
+    scale_fill_manual(values=c("darkgray", "salmon")) +
     ylim(y_limits) +
     labs(x = "Target", y = "Delta Cq", title = formatted_title) +
     # Highlighted section: Adds asterisks
@@ -477,12 +551,25 @@ print(acute_treatment_t_test_results_df)
 # Plotting
 
 ## Delta Cq boxplots
-```{r delta-Cq-boxplots}
+
+## Lifestage comparisons
+```{r delta-Cq-boxplots-lifestage}
 # Create box plots for each comparison
 unique_comparisons <- unique(life_stage_t_test_results_df$comparison)
 
 for (comparison in unique_comparisons) {
   create_boxplot_delta_Cq(delta_Cq_df, comparison, life_stage_t_test_results_df)
+}
+```
+
+## Conditioning comparisons
+```{r delta-Cq-boxplots-conditioning}
+
+# Create box plots for each comparison
+unique_comparisons <- unique(conditioning_treatment_t_test_results_df$comparison)
+
+for (comparison in unique_comparisons) {
+  create_boxplot_conditioning(delta_Cq_df, comparison, conditioning_treatment_t_test_results_df)
 }
 ```
 
